# DeepSeek-TUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_GRAPH.md  README.md  README.zh-CN.md  config.example.toml
.claude/commands/: init-trimtab.md
.github/workflows/: ci.yml  crates-publish.yml  release.yml  sync-cnb.yml
.trimtab/: init-trimtab-protocol.md
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: lib.rs
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/src/: audit.rs  automation_manager.rs  child_env.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  config.rs  config_ui.rs  deepseek_theme.rs  error_taxonomy.rs  eval.rs  features.rs  hooks.rs  llm_client.rs  localization.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  models.rs  palette.rs  pricing.rs  project_context.rs  project_doc.rs  prompts.rs  runtime_api.rs  settings.rs  (+8 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  KEYBINDINGS.md  MCP.md  MODES.md  OPERATIONS_RUNBOOK.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  TOOL_SURFACE.md  parity_release_and_ci.md
npm/deepseek-tui/: README.md  package.json
scripts/release/: publish-crates.sh
src/: client.rs  main.rs
src/core/: engine.rs
src/tools/: shell.rs  spec.rs
src/tui/: app.rs  history.rs  ui.rs  ui_text.rs
(+104 files in other folders)
