[package]
name = "deepseek-tui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style CLI facade for DeepSeek workspace architecture"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
deepseek-agent = { path = "../agent", version = "0.3.31" }
deepseek-app-server = { path = "../app-server", version = "0.3.31" }
deepseek-config = { path = "../config", version = "0.3.31" }
deepseek-execpolicy = { path = "../execpolicy", version = "0.3.31" }
deepseek-mcp = { path = "../mcp", version = "0.3.31" }
deepseek-state = { path = "../state", version = "0.3.31" }
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
